Fix nav spacing

--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -17,7 +17,7 @@
 
   display: flex;
   flex-direction: column;
-  gap: 4rem;
+  gap: min(4rem, calc(5vh + 1rem));
 }
 
 .nav__link:link,
@@ -55,7 +55,6 @@
 
     padding: 3rem;
     display: none; /* Ensures that nav is invisible regardless of user permutations */
-    overflow-y: auto;
   }
 
   .nav.nav--collapsed,
@@ -76,9 +75,12 @@
 
   /* LIST of links */
   .nav__list {
+    display: grid;
     font-size: 3rem;
     align-self: initial;
-    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    grid-template-columns: repeat(autofit, minmax(min-content, max-content));
     gap: 5rem;
   }
 
@@ -136,7 +138,7 @@
 }
 
 /* Prevent nav from overlapping footer when viewport height is small */
-@media only screen and (min-width: 769px) and (max-height: 520px) {
+@media only screen and (min-width: 769px) and (max-height: 560px) {
   .nav {
     margin-bottom: 14rem;
   }
